--- a/css/stile.css
+++ b/css/stile.css
@@ -5,7 +5,6 @@ body {
 }
 
 main {
-    padding-top: 50px;
     max-width: 1200px;
     margin: auto;
 }
@@ -16,36 +15,38 @@ img{
 }
 
 header {
-    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 20px 15px;
 }
 header img{
-    width: 40%;
+    width: 50%;
 }
-
+header nav {
+    margin:0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    gap: 20px;   
+}
 header nav ul {
     list-style: none;
+    padding: 0;
     margin: 0;
-    padding-top: 10px;
     display: flex;
     gap: 10px;
-    font-size: 20px;
-    padding-right: 15px;
 }
-
+nav ul li {
+    position: relative;
+}
 header nav a {
     color: #ff9900;
     padding: 10px;
     text-decoration: none;
-    text-transform: uppercase;
-    float: left;
     font-size: 18px;
-    border-radius: 20px;
-    line-height: 10px;
+    border-radius: 10px;
 }
-
 header nav a:hover {
     background-color: #ddd;
     color: #a46302;
@@ -54,49 +55,74 @@ header .active {
     background-color: #ddd;
 }
 
+.hamburger-lines {
+  display: block;
+  height: 26px;
+  width: 32px;
+  position: absolute;
+  right: 20px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  opacity: 0;
+}
+.hamburger-lines .line {
+  display: block;
+  height: 5px;
+  width: 100%;
+  border-radius: 10px;
+  background: #ff9900;
+}
+.hamburger-lines .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+.hamburger-lines .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+.hamburger-lines .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+  transform: rotate(45deg);
+}
+input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+  transform: scaleY(0);
+}
+input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+  transform: rotate(-45deg);
+}
+.checkbox {
+  position: absolute;
+  display: none;
+  height: 32px;
+  width: 32px;
+  top: 16x;
+  right: 16px;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
+}
+
 .intro{
-    display: flex;
-    gap: 20px;
     background-image: linear-gradient(350deg, #BFE8FF, #FFF6C8, #ffe1bd, #C3E7FF);
-    height: 350px;
+}
+.intro_testo{
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 40px 0;
 }
 .intro h1{
     color: #ff9900;
-    padding-top: 100px;
-    padding-left: 12%;
     font-size: 54px;
-
+    margin: 0;
 }
 .intro h3{
-    line-height: 1px;
     color: #ff9900;
-    padding-left: 12%;
-    font-size: 32px;
-}
-.intro_testo{
-    width: 60%;
-    height: auto;
-}
-.intro_img{
-    width: 25%;
-}
-.intro_img img{
-    padding:10px;
-}
-
-.siamo h2{
-    padding-top: 60px;
-    color: #ff9900;
-    font-size: 28px;
-    text-align: center;
-}
-.siamo h3{
-    color: #ff9900;
-    font-size: 28px;
-    text-align: center;
-}
-.siamo h3 .piu{
-    color: #ff9900
+    font-size: 24px;
+    margin: 0 0 10px 0;
 }
 
 .titolo{
@@ -117,38 +143,44 @@ header .active {
 }
 
 .evidenza{
-    border-radius: 20px 20px 20px 20px;
-    box-shadow: 0px 2px 5px #555555;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 1px 1px 20px rgba(37, 37, 37, 0.4);
     margin-bottom: 20px;
 }
 .evidenza:hover {
-    box-shadow: 0px 2px 10px #000000;
+    box-shadow: 1px 2px 20px rgba(0, 0, 0, 0.4);
 }
 .evidenza img {
-    border-radius: 20px 20px 0 0;
+    border-radius: 10px 10px 0 0;
     object-fit: cover;
     height: 250px;
     width: 100%;
 }
 
 .citta{
-    border-radius: 20px 20px 20px 20px;
-    box-shadow: 0px 2px 5px #555555;
+    border-radius: 10px;
+    box-shadow: 1px 1px 20px rgba(37, 37, 37, 0.4);
     margin-bottom: 20px;
 }
 .citta:hover {
-    box-shadow: 0px 2px 10px #000000;
+    box-shadow: 1px 2px 20px rgba(0, 0, 0, 0.4);
 }
 .citta img {
-    border-radius: 20px 20px 0 0;
+    border-radius: 10px 10px 0 0;
     object-fit: cover;
     height: 250px;
     width: 100%;
 }
 
-main p{
+.citta p{
     color: #ff9900;
-    padding-left: 10px;
+    padding-left: 15px;
+    font-size: 24px;
+}
+
+.grid p{
+    color: #ff9900;
+    padding-left: 15px;
     font-size: 24px;
 }
 
@@ -156,44 +188,53 @@ main p{
     text-decoration: none;
 }
 
+.chisiamotitolo{
+    text-align: center;
+    color: #ff9900;
+    font-size: 24px;
+    margin-top: 150px;
+}
+.chisiamo{
+    font-size: 18px;
+    gap: 16px;
+    margin-bottom: 80px;
+    color: #545454;
+    text-align: center;
+    margin: auto;
+}
 /*città*/
-.intro2{
+.intro2 {
     background-image: linear-gradient(350deg, #BFE8FF, #FFF6C8, #ffe1bd, #C3E7FF);
-    height: 200px;
 }
 .intro2 h1{
     color: #ff9900;
-    padding-top: 50px;
-    padding-left: 12%;
     font-size: 54px;
+    margin: 0;
 }
 .intro2 h3{
-    line-height: 1px;
     color: #ff9900;
-    padding-left: 12%;
     font-size: 32px;
+    margin: 0 0 10px 0;
 }
 
 .descrizione{
     display: flex;
-    gap: 20px;
+    gap: 16px;
     background-color: #f9f9f9;
     margin-bottom: 80px;
-    border-radius: 20px 20px 20px 20px;
-    box-shadow: 2px 2px 5px #555555;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 1px 1px 20px rgba(37, 37, 37, 0.4);
     height: auto;
 }
 .descrizione .img{
-    border-radius: 20px 0px 0px 20px;
+    border-radius: 10px 0px 0px 10px;
     width: 40%;
     object-fit: cover;
 }
 .descrizione p{
     color: #545454;
-    padding-top: 20px;
     padding-right: 10px;
-    float: right;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 24px;
 }
 /*--*/
@@ -217,38 +258,30 @@ main p{
     color: #545454;
 }
 /*--*/
-.chisiamo p{
-    color: #545454;
-}
 
 footer {
     color: #EDFAFF;
     padding-top: 100px ;
-    position: absolute;
-    margin-top: 40px;
     display: flex;
+    max-width: 1200px;
+    margin: 40px auto;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .imgf{
-    width: 50%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    
+    display: flex;
+    gap: 16px; 
 }
 .imgs{
-    width: 50%;
+    width: 40px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.testof{
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-}
 footer p, footer a{
     text-decoration: none;
-    font-size: 24px;
+    font-size: 20px;
     color: #ff9900;
     text-align: center;
 }
@@ -256,66 +289,60 @@ footer p, footer a{
 
 @media screen and (max-width:  800px) {
     main{
-        margin: 10px;
+        margin: 15px;
     }
-
-    .header a {
-      float: none;
-      display: block;
-      text-align: left;
+    /*nav*/
+    .checkbox {
+        display: block;
     }
-    
-    header .nav {
-      float: none;
-    }
-    header nav ul{
-        display: grid;
+    header nav ul {
+        gap: 10px;
+        flex-direction: column;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        background-color: #ffffff;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
         text-align: center;
     }
-    header nav a{
-        font-size: 14px;
-        float:none;
-        margin-right: 40px;
+    input[type="checkbox"]:checked ~ nav ul {
+        opacity: 100;
     }
+    .hamburger-lines {
+        opacity: 100;
+    }
+    header nav ul li {
+        margin-top: 15px;
+        display: block;
+    }
+    .submenu {
+        width: 100%;
+        display: block;
+        position: relative;
+        padding: 10px 0;
+        margin: 0;
+    }
+    header img{
+        width: 80%;
+    }
+    /*--*/
 
-    .intro{
-        display: flex;
-        gap: 20px;
-        background-image: linear-gradient(350deg, #BFE8FF, #FFF6C8, #ffe1bd, #C3E7FF);
-        height: 250px;
+    .intro_testo{
+        max-width: 1200px;
+        padding: 0;
     }
     .intro h1{
         color: #ff9900;
-        padding-top: 30px;
-        padding-left: 2%;
-        font-size: 36px;
-    
+        font-size: 34px;
+        margin: 0 0 0 10px;
     }
     .intro h3{
-        line-height: 1px;
         color: #ff9900;
-        padding-left: 2%;
-        font-size: 20px;
-    }
-    .intro_img{
-        width: 40%;
-    }
-    .intro_img img{
-        margin-top: 20px;
-        padding:10px;
-    }
-    
-
-    .siamo h2{
-        padding-top: 60px;
-        color: #ff9900;
-        font-size: 22px;
-        text-align: center;
-    }
-    .siamo h3{
-        color: #ff9900;
-        font-size: 22px;
-        text-align: center;
+        font-size: 18px;
+        margin: 0 0 0 10px;
     }
 
     .titolo h2 {
@@ -355,19 +382,18 @@ footer p, footer a{
         gap: 20px;
         background-color: #f9f9f9;
         margin-bottom: 80px;
-        border-radius: 20px 20px 20px 20px;
-        box-shadow: 0px 2px 5px #555555;
+        border-radius: 10px 10px 10px 10px;
+        box-shadow: 1px 1px 20px rgba(37, 37, 37, 0.4);
         height: auto;
     }
     .descrizione .img{
-        border-radius: 20px 20px 0px 0px;
+        border-radius: 10px 10px 0px 0px;
         width: 100%;
         object-fit: cover;
     }
     .descrizione p{
         padding-right: 10px;
-        float: right;
-        font-size: 18px;
+        font-size: 14px;
     }
     /* */
 
@@ -389,22 +415,11 @@ footer p, footer a{
 
     footer {
         color: #EDFAFF;
-        margin-top: 300px;
-        position: absolute;
-        margin-top: 40px;
-        display: grid;
-    }
-    .imgf{
+        padding-top: 30px ;
+        display: flex;
+        flex-direction: column;
+        max-width: 1200px;
+        margin: 40px auto;
         align-items: center;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    footer p, footer a {
-        font-size: 16px;
-        color: #ff9900;
-        text-align: center;
     }
 }
