--- a/css/stile.css
+++ b/css/stile.css
@@ -176,15 +176,9 @@ input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     width: 100%;
 }
 
-.citta p{
+.citta p, .grid p{
     color: #ff9900;
-    padding-left: 15px;
-    font-size: 24px;
-}
-
-.grid p{
-    color: #ff9900;
-    padding-left: 15px;
+    padding-left: 20px;
     font-size: 24px;
 }
 
@@ -204,7 +198,6 @@ input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     margin-bottom: 80px;
     color: #545454;
     text-align: center;
-    margin: auto;
 }
 
 /*città*/
@@ -390,19 +383,23 @@ footer p, footer a{
         gap: 20px;
         padding-bottom: 20px;
     }
+    .citta p, .grid p{
+        color: #ff9900;
+        padding-left: 20px;
+        font-size: 20px;
+    }
 
     .chisiamotitolo{
-        text-align: center;
+        text-align: left;
         color: #ff9900;
-        font-size: 20px;
+        font-size: 18px;
         margin-top: 120px;
     }
     .chisiamo{
         font-size: 16px;
-        gap: 16px;
         margin-bottom: 80px;
         color: #545454;
-        margin: auto;
+        text-align: left;
     }
 
     /*città*/
