--- a/css/stile.css
+++ b/css/stile.css
@@ -134,6 +134,7 @@ input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     color: #ff9900;
     margin: 0;
     padding: 20px 10px;
+    font-size: 28px;
 }
 
 .grid {
